# truthpage

./: .claudeignore  .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  GROWTH.md  TODO.md  fly.toml  pyproject.toml  render.yaml  run_sweep.py
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_subscriber_unsubscribe.py  0003_tenant_email.py  0004_tenant_trial_ends_at.py  0005_paddle_billing_fields.py
app/: main.py
app/core/: config.py  ratelimit.py
app/core/llm/: analyzer.py  schemas.py
app/core/scraper/: detector.py  fetcher.py  hasher.py  normalizer.py
app/db/: base.py  session.py
app/db/models/: __init__.py  change_event.py  mixins.py  subprocessor.py  subscriber.py  tenant.py
app/routers/: admin.py  auth.py  billing.py  dashboard.py  deps.py  pages.py  public.py  subprocessors.py  webhooks.py
app/scheduler/: jobs.py
app/services/: admin_stats.py  approval.py  mailer.py  monitoring.py
static/: tailwind.css
templates/: _footer.html  _legal_base.html  admin.html  admin_tenant.html  base.html  checkout.html  dashboard.html  landing.html  pricing.html  privacy.html  public_confirmed.html  public_trust.html  public_unsubscribed.html  queue.html  refunds.html  terms.html
templates/partials/: change_event_done.html  subprocessor_table.html  subscribe_result.html
tests/: conftest.py  test_admin.py  test_auth_helpers.py  test_hasher_detector.py  test_normalizer.py  test_ratelimit.py  test_url_validation.py  test_webhooks_paddle.py
