[project]
name = "trustpages"
version = "0.1.0"
description = "TrustPages MVP - Privacy Policy Change Monitoring"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.18",
    "jinja2>=3.1.0",
    "google-genai>=2.0.0",
    "httpx[http2]>=0.28.0",
    "playwright>=1.44.0",
    "selectolax>=0.3.0",
    "pyjwt>=2.10.0",
    "cachetools>=5.5.0",
    "apscheduler>=3.10.0",
    "sentry-sdk[fastapi]>=2.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]
